k8s/unsigned-ecr-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-ecr-test
  namespace: chatbot
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: chatbot
      image: 600897147573.dkr.ecr.us-east-1.amazonaws.com/modern-devsecops-chatbot:unsigned-test
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
      resources:
        requests:
          cpu: "50m"
          memory: "128Mi"
        limits:
          cpu: "100m"
          memory: "256Mi"
