k8s/unsigned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-nginx
  namespace: chatbot
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: nginx
      image: nginx:1.27

      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL

      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
